works well for -s, -f, and -c

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,18 @@
-[build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
 name = "pybites-carbon"
-authors = [{name = "Bob Belderbos", email = "bob@pybit.es"}]
+version = "0.2.0"
+authors = [{name = "Pybites", email = "info@pybit.es"}]
 readme = "README.md"
-requires-python = ">=3.7"
-classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["version", "description"]
+requires-python = ">=3.10"
 dependencies = [
+    "playwright>=1.47.0",
     "pyperclip==1.8.2",
     "python-dotenv==0.21.0",
-    "selenium==4.6.1",
 ]
 
-[tool.flit.module]
-name = "carbon"
-
-[project.optional-dependencies]
-test = [
-    "pytest",
-    "mypy",
-    "flake8",
+[tool.uv]
+dev-dependencies = [
+    "flake8>=7.1.1",
+    "mypy>=1.12.0",
+    "pytest-playwright>=0.5.2",
 ]
-
-[project.urls]
-Documentation = "https://www.youtube.com/watch?v=oxeGhlJQll8"
-Source = "https://github.com/bbelderbos/pybites-carbon"
-
-[project.scripts]
-carbon = "carbon.__main__:main"
